asgn3/src/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    ATRATE
    CHARACTER
    LCURLY
    UNDERSCORE
    DOUBLESTAR
    INVERTDOUBLECOMMA
    FOR
    RCURLY
    LAMBDA
    TO
    COMMENT
    INVERTCOMMA
    PERCENT
    AS
    DOUBLESLASH
    RANGE
    AMPERSAND
    SELF
    BREAK
    CONTINUE

Grammar

Rule 0     S' -> Goal
Rule 1     Goal -> Program
Rule 2     Program -> PROGRAM ID SEMICOLON Block
Rule 3     Block -> CompoundStmt
Rule 4     Block -> DeclSection CompoundStmt
Rule 5     DeclSection -> DeclSection WhichSection
Rule 6     DeclSection -> <empty>
Rule 7     WhichSection -> ConstSection
Rule 8     WhichSection -> TypeSection
Rule 9     WhichSection -> VarSection
Rule 10    WhichSection -> ProcedureDeclSection
Rule 11    CompoundStmt -> BEGIN StmtList END SEMICOLON
Rule 12    StmtList -> Statement SEMICOLON StmtList
Rule 13    StmtList -> Statement SEMICOLON
Rule 14    Statement -> SimpleStatement
Rule 15    Statement -> StructStmt
Rule 16    Statement -> <empty>
Rule 17    SimpleStatement -> Designator
Rule 18    SimpleStatement -> Designator LPAREN ExprList RPAREN
Rule 19    SimpleStatement -> Designator ASSIGNTO Expression
Rule 20    SimpleStatement -> INHERITED
Rule 21    SimpleStatement -> LPAREN Expression RPAREN
Rule 22    StructStmt -> CompoundStmt
Rule 23    StructStmt -> ConditionalStmt
Rule 24    StructStmt -> LoopStmt
Rule 25    ConditionalStmt -> IfStmt SEMICOLON
Rule 26    ConditionalStmt -> CaseStmt SEMICOLON
Rule 27    IfStmt -> IF Expression THEN Statement
Rule 28    IfStmt -> IF Expression THEN Statement ELSE Statement
Rule 29    CaseStmt -> CASE Expression OF CaseSelector ColonCaseSelector END
Rule 30    CaseStmt -> CASE Expression OF CaseSelector ColonCaseSelector ELSE Statement SEMICOLON END
Rule 31    ColonCaseSelector -> ColonCaseSelector SEMICOLON CaseSelector
Rule 32    ColonCaseSelector -> <empty>
Rule 33    CaseSelector -> CaseLabel COLON Statement
Rule 34    CaseLabel -> NUMBER
Rule 35    LoopStmt -> RepeatStmt
Rule 36    LoopStmt -> WhileStmt
Rule 37    RepeatStmt -> REPEAT Statement UNTIL Expression SEMICOLON
Rule 38    WhileStmt -> WHILE Expression DO Statement
Rule 39    Expression -> SimpleExpression RelSimpleStar
Rule 40    RelSimpleStar -> RelOp SimpleExpression RelSimpleStar
Rule 41    RelSimpleStar -> <empty>
Rule 42    SimpleExpression -> PLUS Term AddTermStar
Rule 43    SimpleExpression -> MINUS Term AddTermStar
Rule 44    SimpleExpression -> Term AddTermStar
Rule 45    AddTermStar -> AddOp Term AddTermStar
Rule 46    AddTermStar -> <empty>
Rule 47    Term -> Factor MulFacStar
Rule 48    MulFacStar -> MulOp Factor MulFacStar
Rule 49    MulFacStar -> <empty>
Rule 50    Factor -> Designator
Rule 51    Factor -> Designator LPAREN ExprList RPAREN
Rule 52    Factor -> USERSTRING
Rule 53    Factor -> NUMBER
Rule 54    Factor -> LPAREN Expression RPAREN
Rule 55    Factor -> NOT Factor
Rule 56    Factor -> INHERITED Designator
Rule 57    Factor -> INHERITED
Rule 58    Factor -> TypeID LPAREN Expression RPAREN
Rule 59    Factor -> LPAREN LambFunc RPAREN
Rule 60    Type -> TypeID
Rule 61    Type -> SimpleType
Rule 62    Type -> PointerType
Rule 63    Type -> StringType
Rule 64    Type -> ProcedureType
Rule 65    Type -> Array
Rule 66    Type -> ID
Rule 67    SimpleType -> OrdinalType
Rule 68    SimpleType -> RealType
Rule 69    PointerType -> POWER ID
Rule 70    StringType -> STRING
Rule 71    ProcedureType -> ProcedureHeading
Rule 72    ProcedureType -> FuncHeading
Rule 73    TypeArgs -> LPAREN TypeID RPAREN
Rule 74    TypeArgs -> LPAREN STRING RPAREN
Rule 75    TypeID -> INTEGER
Rule 76    TypeID -> REAL
Rule 77    TypeID -> CHAR
Rule 78    OrdinalType -> INTEGER
Rule 79    RealType -> DOUBLE
Rule 80    TypeSection -> TYPE ColonTypeDecl
Rule 81    ColonTypeDecl -> ColonTypeDecl TypeDecl SEMICOLON
Rule 82    ColonTypeDecl -> <empty>
Rule 83    TypeDecl -> ID EQUALS Type
Rule 84    TypeDecl -> ID EQUALS RestrictedType
Rule 85    TypeDecl -> ID EQUALS TYPE Type
Rule 86    TypeDecl -> ID EQUALS TYPE RestrictedType
Rule 87    RestrictedType -> ObjectType
Rule 88    RestrictedType -> ClassType
Rule 89    RelOp -> LANGLE
Rule 90    RelOp -> RANGLE
Rule 91    RelOp -> GEQ
Rule 92    RelOp -> LEQ
Rule 93    RelOp -> NOTEQUALS
Rule 94    RelOp -> EQUALS
Rule 95    AddOp -> PLUS
Rule 96    AddOp -> MINUS
Rule 97    AddOp -> OR
Rule 98    AddOp -> XOR
Rule 99    MulOp -> MULTIPLY
Rule 100   MulOp -> DIVIDE
Rule 101   MulOp -> DIV
Rule 102   MulOp -> MOD
Rule 103   MulOp -> AND
Rule 104   MulOp -> SHL
Rule 105   MulOp -> SHR
Rule 106   CommaExpression -> CommaExpression COMMA Expression
Rule 107   CommaExpression -> <empty>
Rule 108   ExprList -> Expression CommaExpression
Rule 109   Designator -> ID DesSubEleStar
Rule 110   DesSubEleStar -> DesSubEleStar DesignatorSubElem
Rule 111   DesSubEleStar -> <empty>
Rule 112   DesignatorSubElem -> DOT ID
Rule 113   DesignatorSubElem -> LSQUARE ExprList RSQUARE
Rule 114   DesignatorSubElem -> POWER SEMICOLON
Rule 115   ConstSection -> CONSTANT ColonConstDecl
Rule 116   ConstSection -> <empty>
Rule 117   ColonConstDecl -> ColonConstDecl ConstDecl SEMICOLON
Rule 118   ColonConstDecl -> <empty>
Rule 119   ConstDecl -> ID EQUALS ConstExpr
Rule 120   ConstDecl -> ID COLON TypeID EQUALS TypedConst
Rule 121   TypedConst -> ConstExpr
Rule 122   TypedConst -> ArrayConst
Rule 123   Array -> ARRAY LSQUARE ONE DOTDOT OrdinalType RSQUARE OF TypeArray
Rule 124   TypeArray -> TypeID
Rule 125   TypeArray -> PointerType
Rule 126   ArrayConst -> LPAREN TypedConst CommaTypedConst RPAREN
Rule 127   CommaTypedConst -> CommaTypedConst COMMA TypedConst
Rule 128   CommaTypedConst -> <empty>
Rule 129   ConstExpr -> <empty>
Rule 130   IdentList -> ID TypeArgs CommaIDTypeArgs
Rule 131   IdentList -> ID CommaIDTypeArgs
Rule 132   CommaIDTypeArgs -> CommaIDTypeArgs COMMA ID TypeArgs
Rule 133   CommaIDTypeArgs -> CommaIDTypeArgs COMMA ID
Rule 134   CommaIDTypeArgs -> <empty>
Rule 135   ParamIdentList -> ParamIdent COMMA ParamIdentList
Rule 136   ParamIdentList -> ParamIdent
Rule 137   ParamIdentList -> <empty>
Rule 138   ParamIdent -> ID COLON Type
Rule 139   ParamIdent -> ID
Rule 140   VarSection -> VAR ColonVarDecl
Rule 141   ColonVarDecl -> VarDecl SEMICOLON ColonVarDecl
Rule 142   ColonVarDecl -> <empty>
Rule 143   VarDecl -> IdentList COLON Type
Rule 144   ProcedureDeclSection -> ProcedureDecl
Rule 145   ProcedureDeclSection -> FuncDecl
Rule 146   ProcedureDeclSection -> ConstrucDecl
Rule 147   ProcedureDeclSection -> LambFuncDecl
Rule 148   ConstrucDecl -> ConstrucHeading SEMICOLON Block
Rule 149   ConstrucHeading -> CONSTRUCTOR Designator FormalParams
Rule 150   ConstrucHeadingSemicolon -> CONSTRUCTOR Designator FormalParams SEMICOLON
Rule 151   FuncDecl -> FuncHeading SEMICOLON Block
Rule 152   FuncHeading -> FUNCTION Designator FormalParams COLON Type
Rule 153   FuncHeadingSemicolon -> FUNCTION Designator FormalParams COLON Type SEMICOLON
Rule 154   FormalParams -> LPAREN ParamIdentList RPAREN
Rule 155   FormalParams -> <empty>
Rule 156   ProcedureDecl -> ProcedureHeading SEMICOLON Block
Rule 157   ProcedureHeading -> PROCEDURE Designator FormalParams
Rule 158   ProcedureHeadingSemicolon -> PROCEDURE Designator FormalParams SEMICOLON
Rule 159   LambFuncDecl -> ID COLON SimpleExpression
Rule 160   LambFunc -> ID LPAREN ConstExpr RPAREN
Rule 161   ObjectType -> OBJECT ObjectHeritage ObjectBody END
Rule 162   ObjectHeritage -> LPAREN IdentList RPAREN
Rule 163   ObjectHeritage -> <empty>
Rule 164   ObjectBody -> ObjectBody ObjectVis ObjectVarSection ObjectTypeSection ObjectConstSection ObjectMethodList
Rule 165   ObjectBody -> <empty>
Rule 166   ObjectVis -> PUBLIC
Rule 167   ObjectVis -> <empty>
Rule 168   ObjectVarSection -> ColonVarDecl
Rule 169   ObjectVarSection -> <empty>
Rule 170   ObjectTypeSection -> ColonTypeDecl
Rule 171   ObjectTypeSection -> <empty>
Rule 172   ObjectConstSection -> ColonConstDecl
Rule 173   ObjectConstSection -> <empty>
Rule 174   ObjectMethodList -> ObjectMethodHeading
Rule 175   ObjectMethodList -> <empty>
Rule 176   ObjectMethodHeading -> ProcedureHeadingSemicolon
Rule 177   ObjectMethodHeading -> FuncHeadingSemicolon
Rule 178   ObjectMethodHeading -> ConstrucHeadingSemicolon
Rule 179   ClassType -> CLASS ClassHeritage ClassBody END
Rule 180   ClassHeritage -> LPAREN IdentList RPAREN
Rule 181   ClassHeritage -> <empty>
Rule 182   ClassBody -> ClassBody ClassVis ClassTypeSection ClassConstSection ClassVarSection ClassMethodList
Rule 183   ClassBody -> <empty>
Rule 184   ClassVis -> PUBLIC
Rule 185   ClassVis -> <empty>
Rule 186   ClassTypeSection -> ColonTypeDecl
Rule 187   ClassTypeSection -> <empty>
Rule 188   ClassConstSection -> ColonConstDecl
Rule 189   ClassConstSection -> <empty>
Rule 190   ClassVarSection -> ColonVarDecl
Rule 191   ClassVarSection -> <empty>
Rule 192   ClassMethodList -> ClassMethodHeading
Rule 193   ClassMethodList -> <empty>
Rule 194   ClassMethodHeading -> ProcedureHeadingSemicolon
Rule 195   ClassMethodHeading -> FuncHeadingSemicolon
Rule 196   ClassMethodHeading -> ConstrucHeadingSemicolon

Terminals, with rules where they appear

AMPERSAND            : 
AND                  : 103
ARRAY                : 123
AS                   : 
ASSIGNTO             : 19
ATRATE               : 
BEGIN                : 11
BREAK                : 
CASE                 : 29 30
CHAR                 : 77
CHARACTER            : 
CLASS                : 179
COLON                : 33 120 138 143 152 153 159
COMMA                : 106 127 132 133 135
COMMENT              : 
CONSTANT             : 115
CONSTRUCTOR          : 149 150
CONTINUE             : 
DIV                  : 101
DIVIDE               : 100
DO                   : 38
DOT                  : 112
DOTDOT               : 123
DOUBLE               : 79
DOUBLESLASH          : 
DOUBLESTAR           : 
ELSE                 : 28 30
END                  : 11 29 30 161 179
EQUALS               : 83 84 85 86 94 119 120
FOR                  : 
FUNCTION             : 152 153
GEQ                  : 91
ID                   : 2 66 69 83 84 85 86 109 112 119 120 130 131 132 133 138 139 159 160
IF                   : 27 28
INHERITED            : 20 56 57
INTEGER              : 75 78
INVERTCOMMA          : 
INVERTDOUBLECOMMA    : 
LAMBDA               : 
LANGLE               : 89
LCURLY               : 
LEQ                  : 92
LPAREN               : 18 21 51 54 58 59 73 74 126 154 160 162 180
LSQUARE              : 113 123
MINUS                : 43 96
MOD                  : 102
MULTIPLY             : 99
NOT                  : 55
NOTEQUALS            : 93
NUMBER               : 34 53
OBJECT               : 161
OF                   : 29 30 123
ONE                  : 123
OR                   : 97
PERCENT              : 
PLUS                 : 42 95
POWER                : 69 114
PROCEDURE            : 157 158
PROGRAM              : 2
PUBLIC               : 166 184
RANGE                : 
RANGLE               : 90
RCURLY               : 
REAL                 : 76
REPEAT               : 37
RPAREN               : 18 21 51 54 58 59 73 74 126 154 160 162 180
RSQUARE              : 113 123
SELF                 : 
SEMICOLON            : 2 11 12 13 25 26 30 31 37 81 114 117 141 148 150 151 153 156 158
SHL                  : 104
SHR                  : 105
STRING               : 70 74
THEN                 : 27 28
TO                   : 
TYPE                 : 80 85 86
UNDERSCORE           : 
UNTIL                : 37
USERSTRING           : 52
VAR                  : 140
WHILE                : 38
XOR                  : 98
error                : 

Nonterminals, with rules where they appear

AddOp                : 45
AddTermStar          : 42 43 44 45
Array                : 65
ArrayConst           : 122
Block                : 2 148 151 156
CaseLabel            : 33
CaseSelector         : 29 30 31
CaseStmt             : 26
ClassBody            : 179 182
ClassConstSection    : 182
ClassHeritage        : 179
ClassMethodHeading   : 192
ClassMethodList      : 182
ClassType            : 88
ClassTypeSection     : 182
ClassVarSection      : 182
ClassVis             : 182
ColonCaseSelector    : 29 30 31
ColonConstDecl       : 115 117 172 188
ColonTypeDecl        : 80 81 170 186
ColonVarDecl         : 140 141 168 190
CommaExpression      : 106 108
CommaIDTypeArgs      : 130 131 132 133
CommaTypedConst      : 126 127
CompoundStmt         : 3 4 22
ConditionalStmt      : 23
ConstDecl            : 117
ConstExpr            : 119 121 160
ConstSection         : 7
ConstrucDecl         : 146
ConstrucHeading      : 148
ConstrucHeadingSemicolon : 178 196
DeclSection          : 4 5
DesSubEleStar        : 109 110
Designator           : 17 18 19 50 51 56 149 150 152 153 157 158
DesignatorSubElem    : 110
ExprList             : 18 51 113
Expression           : 19 21 27 28 29 30 37 38 54 58 106 108
Factor               : 47 48 55
FormalParams         : 149 150 152 153 157 158
FuncDecl             : 145
FuncHeading          : 72 151
FuncHeadingSemicolon : 177 195
Goal                 : 0
IdentList            : 143 162 180
IfStmt               : 25
LambFunc             : 59
LambFuncDecl         : 147
LoopStmt             : 24
MulFacStar           : 47 48
MulOp                : 48
ObjectBody           : 161 164
ObjectConstSection   : 164
ObjectHeritage       : 161
ObjectMethodHeading  : 174
ObjectMethodList     : 164
ObjectType           : 87
ObjectTypeSection    : 164
ObjectVarSection     : 164
ObjectVis            : 164
OrdinalType          : 67 123
ParamIdent           : 135 136
ParamIdentList       : 135 154
PointerType          : 62 125
ProcedureDecl        : 144
ProcedureDeclSection : 10
ProcedureHeading     : 71 156
ProcedureHeadingSemicolon : 176 194
ProcedureType        : 64
Program              : 1
RealType             : 68
RelOp                : 40
RelSimpleStar        : 39 40
RepeatStmt           : 35
RestrictedType       : 84 86
SimpleExpression     : 39 40 159
SimpleStatement      : 14
SimpleType           : 61
Statement            : 12 13 27 28 28 30 33 37 38
StmtList             : 11 12
StringType           : 63
StructStmt           : 15
Term                 : 42 43 44 45
Type                 : 83 85 138 143 152 153
TypeArgs             : 130 132
TypeArray            : 123
TypeDecl             : 81
TypeID               : 58 60 73 120 124
TypeSection          : 8
TypedConst           : 120 126 127
VarDecl              : 141
VarSection           : 9
WhichSection         : 5
WhileStmt            : 36

Parsing method: LALR

state 0

    (0) S' -> . Goal
    (1) Goal -> . Program
    (2) Program -> . PROGRAM ID SEMICOLON Block

    PROGRAM         shift and go to state 2

    Program                        shift and go to state 3
    Goal                           shift and go to state 1

state 1

    (0) S' -> Goal .



state 2

    (2) Program -> PROGRAM . ID SEMICOLON Block

    ID              shift and go to state 4


state 3

    (1) Goal -> Program .

    $end            reduce using rule 1 (Goal -> Program .)


state 4

    (2) Program -> PROGRAM ID . SEMICOLON Block

    SEMICOLON       shift and go to state 5


state 5

    (2) Program -> PROGRAM ID SEMICOLON . Block
    (3) Block -> . CompoundStmt
    (4) Block -> . DeclSection CompoundStmt
    (11) CompoundStmt -> . BEGIN StmtList END SEMICOLON
    (5) DeclSection -> . DeclSection WhichSection
    (6) DeclSection -> .

  ! shift/reduce conflict for BEGIN resolved as shift
    BEGIN           shift and go to state 7
    CONSTANT        reduce using rule 6 (DeclSection -> .)
    TYPE            reduce using rule 6 (DeclSection -> .)
    VAR             reduce using rule 6 (DeclSection -> .)
    ID              reduce using rule 6 (DeclSection -> .)
    PROCEDURE       reduce using rule 6 (DeclSection -> .)
    FUNCTION        reduce using rule 6 (DeclSection -> .)
    CONSTRUCTOR     reduce using rule 6 (DeclSection -> .)

  ! BEGIN           [ reduce using rule 6 (DeclSection -> .) ]

    DeclSection                    shift and go to state 6
    CompoundStmt                   shift and go to state 8
    Block                          shift and go to state 9

state 6

    (4) Block -> DeclSection . CompoundStmt
    (5) DeclSection -> DeclSection . WhichSection
    (11) CompoundStmt -> . BEGIN StmtList END SEMICOLON
    (7) WhichSection -> . ConstSection
    (8) WhichSection -> . TypeSection
    (9) WhichSection -> . VarSection
    (10) WhichSection -> . ProcedureDeclSection
    (115) ConstSection -> . CONSTANT ColonConstDecl
    (116) ConstSection -> .
    (80) TypeSection -> . TYPE ColonTypeDecl
    (140) VarSection -> . VAR ColonVarDecl
    (144) ProcedureDeclSection -> . ProcedureDecl
    (145) ProcedureDeclSection -> . FuncDecl
    (146) ProcedureDeclSection -> . ConstrucDecl
    (147) ProcedureDeclSection -> . LambFuncDecl
    (156) ProcedureDecl -> . ProcedureHeading SEMICOLON Block
    (151) FuncDecl -> . FuncHeading SEMICOLON Block
    (148) ConstrucDecl -> . ConstrucHeading SEMICOLON Block
    (159) LambFuncDecl -> . ID COLON SimpleExpression
    (157) ProcedureHeading -> . PROCEDURE Designator FormalParams
    (152) FuncHeading -> . FUNCTION Designator FormalParams COLON Type
    (149) ConstrucHeading -> . CONSTRUCTOR Designator FormalParams

  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for CONSTANT resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PROCEDURE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for CONSTRUCTOR resolved as shift
    BEGIN           shift and go to state 7
    CONSTANT        shift and go to state 15
    TYPE            shift and go to state 28
    VAR             shift and go to state 23
    ID              shift and go to state 25
    PROCEDURE       shift and go to state 18
    FUNCTION        shift and go to state 20
    CONSTRUCTOR     shift and go to state 11

  ! BEGIN           [ reduce using rule 116 (ConstSection -> .) ]
  ! CONSTANT        [ reduce using rule 116 (ConstSection -> .) ]
  ! TYPE            [ reduce using rule 116 (ConstSection -> .) ]
  ! VAR             [ reduce using rule 116 (ConstSection -> .) ]
  ! ID              [ reduce using rule 116 (ConstSection -> .) ]
  ! PROCEDURE       [ reduce using rule 116 (ConstSection -> .) ]
  ! FUNCTION        [ reduce using rule 116 (ConstSection -> .) ]
  ! CONSTRUCTOR     [ reduce using rule 116 (ConstSection -> .) ]

    ConstrucDecl                   shift and go to state 10
    ConstrucHeading                shift and go to state 27
    ProcedureHeading               shift and go to state 13
    ProcedureDeclSection           shift and go to state 14
    FuncHeading                    shift and go to state 16
    FuncDecl                       shift and go to state 17
    ConstSection                   shift and go to state 19
    LambFuncDecl                   shift and go to state 21
    TypeSection                    shift and go to state 22
    VarSection                     shift and go to state 24
    WhichSection                   shift and go to state 26
    ProcedureDecl                  shift and go to state 12
    CompoundStmt                   shift and go to state 29

state 7

    (11) CompoundStmt -> BEGIN . StmtList END SEMICOLON
    (12) StmtList -> . Statement SEMICOLON StmtList
    (13) StmtList -> . Statement SEMICOLON
    (14) Statement -> . SimpleStatement
    (15) Statement -> . StructStmt
    (16) Statement -> .
    (17) SimpleStatement -> . Designator
    (18) SimpleStatement -> . Designator LPAREN ExprList RPAREN
    (19) SimpleStatement -> . Designator ASSIGNTO Expression
    (20) SimpleStatement -> . INHERITED
    (21) SimpleStatement -> . LPAREN Expression RPAREN
    (22) StructStmt -> . CompoundStmt
    (23) StructStmt -> . ConditionalStmt
    (24) StructStmt -> . LoopStmt
    (109) Designator -> . ID DesSubEleStar
    (11) CompoundStmt -> . BEGIN StmtList END SEMICOLON
    (25) ConditionalStmt -> . IfStmt SEMICOLON
    (26) ConditionalStmt -> . CaseStmt SEMICOLON
    (35) LoopStmt -> . RepeatStmt
    (36) LoopStmt -> . WhileStmt
    (27) IfStmt -> . IF Expression THEN Statement
    (28) IfStmt -> . IF Expression THEN Statement ELSE Statement
    (29) CaseStmt -> . CASE Expression OF CaseSelector ColonCaseSelector END
    (30) CaseStmt -> . CASE Expression OF CaseSelector ColonCaseSelector ELSE Statement SEMICOLON END
    (37) RepeatStmt -> . REPEAT Statement UNTIL Expression SEMICOLON
    (38) WhileStmt -> . WHILE Expression DO Statement

    SEMICOLON       reduce using rule 16 (Statement -> .)
    INHERITED       shift and go to state 41
    LPAREN          shift and go to state 40
    ID              shift and go to state 42
    BEGIN           shift and go to state 7
    IF              shift and go to state 43
    CASE            shift and go to state 34
    REPEAT          shift and go to state 45
    WHILE           shift and go to state 44

    WhileStmt                      shift and go to state 39
    StmtList                       shift and go to state 32
    Designator                     shift and go to state 35
    IfStmt                         shift and go to state 33
    SimpleStatement                shift and go to state 31
    CompoundStmt                   shift and go to state 48
    LoopStmt                       shift and go to state 36
    Statement                      shift and go to state 30
    StructStmt                     shift and go to state 46
    RepeatStmt                     shift and go to state 47
    CaseStmt                       shift and go to state 37
    ConditionalStmt                shift and go to state 38

state 8

    (3) Block -> CompoundStmt .

    BEGIN           reduce using rule 3 (Block -> CompoundStmt .)
    CONSTANT        reduce using rule 3 (Block -> CompoundStmt .)
    TYPE            reduce using rule 3 (Block -> CompoundStmt .)
    VAR             reduce using rule 3 (Block -> CompoundStmt .)
    ID              reduce using rule 3 (Block -> CompoundStmt .)
    PROCEDURE       reduce using rule 3 (Block -> CompoundStmt .)
    FUNCTION        reduce using rule 3 (Block -> CompoundStmt .)
    CONSTRUCTOR     reduce using rule 3 (Block -> CompoundStmt .)
    $end            reduce using rule 3 (Block -> CompoundStmt .)


state 9

    (2) Program -> PROGRAM ID SEMICOLON Block .

    $end            reduce using rule 2 (Program -> PROGRAM ID SEMICOLON Block .)


state 10

    (146) ProcedureDeclSection -> ConstrucDecl .

    BEGIN           reduce using rule 146 (ProcedureDeclSection -> ConstrucDecl .)
    CONSTANT        reduce using rule 146 (ProcedureDeclSection -> ConstrucDecl .)
    TYPE            reduce using rule 146 (ProcedureDeclSection -> ConstrucDecl .)
    VAR             reduce using rule 146 (ProcedureDeclSection -> ConstrucDecl .)
    ID              reduce using rule 146 (ProcedureDeclSection -> ConstrucDecl .)
    PROCEDURE       reduce using rule 146 (ProcedureDeclSection -> ConstrucDecl .)
    FUNCTION        reduce using rule 146 (ProcedureDeclSection -> ConstrucDecl .)
    CONSTRUCTOR     reduce using rule 146 (ProcedureDeclSection -> ConstrucDecl .)


state 11

    (149) ConstrucHeading -> CONSTRUCTOR . Designator FormalParams
    (109) Designator -> . ID DesSubEleStar

    ID              shift and go to state 42

    Designator                     shift and go to state 49

state 12

    (144) ProcedureDeclSection -> ProcedureDecl .

    BEGIN           reduce using rule 144 (ProcedureDeclSection -> ProcedureDecl .)
    CONSTANT        reduce using rule 144 (ProcedureDeclSection -> ProcedureDecl .)
    TYPE            reduce using rule 144 (ProcedureDeclSection -> ProcedureDecl .)
    VAR             reduce using rule 144 (ProcedureDeclSection -> ProcedureDecl .)
    ID              reduce using rule 144 (ProcedureDeclSection -> ProcedureDecl .)
    PROCEDURE       reduce using rule 144 (ProcedureDeclSection -> ProcedureDecl .)
    FUNCTION        reduce using rule 144 (ProcedureDeclSection -> ProcedureDecl .)
    CONSTRUCTOR     reduce using rule 144 (ProcedureDeclSection -> ProcedureDecl .)


state 13

    (156) ProcedureDecl -> ProcedureHeading . SEMICOLON Block

    SEMICOLON       shift and go to state 50


state 14

    (10) WhichSection -> ProcedureDeclSection .

    BEGIN           reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    CONSTANT        reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    TYPE            reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    VAR             reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    ID              reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    PROCEDURE       reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    FUNCTION        reduce using rule 10 (WhichSection -> ProcedureDeclSection .)
    CONSTRUCTOR     reduce using rule 10 (WhichSection -> ProcedureDeclSection .)


state 15

    (115) ConstSection -> CONSTANT . ColonConstDecl
    (117) ColonConstDecl -> . ColonConstDecl ConstDecl SEMICOLON
    (118) ColonConstDecl -> .

    ID              reduce using rule 118 (ColonConstDecl -> .)
    BEGIN           reduce using rule 118 (ColonConstDecl -> .)
    CONSTANT        reduce using rule 118 (ColonConstDecl -> .)
    TYPE            reduce using rule 118 (ColonConstDecl -> .)
    VAR             reduce using rule 118 (ColonConstDecl -> .)
    PROCEDURE       reduce using rule 118 (ColonConstDecl -> .)
    FUNCTION        reduce using rule 118 (ColonConstDecl -> .)
    CONSTRUCTOR     reduce using rule 118 (ColonConstDecl -> .)

    ColonConstDecl                 shift and go to state 51

state 16

    (151) FuncDecl -> FuncHeading . SEMICOLON Block

    SEMICOLON       shift and go to state 52


state 17

    (145) ProcedureDeclSection -> FuncDecl .

    BEGIN           reduce using rule 145 (ProcedureDeclSection -> FuncDecl .)
    CONSTANT        reduce using rule 145 (ProcedureDeclSection -> FuncDecl .)
    TYPE            reduce using rule 145 (ProcedureDeclSection -> FuncDecl .)
    VAR             reduce using rule 145 (ProcedureDeclSection -> FuncDecl .)
    ID              reduce using rule 145 (ProcedureDeclSection -> FuncDecl .)
    PROCEDURE       reduce using rule 145 (ProcedureDeclSection -> FuncDecl .)
    FUNCTION        reduce using rule 145 (ProcedureDeclSection -> FuncDecl .)
    CONSTRUCTOR     reduce using rule 145 (ProcedureDeclSection -> FuncDecl .)


state 18

    (157) ProcedureHeading -> PROCEDURE . Designator FormalParams
    (109) Designator -> . ID DesSubEleStar

    ID              shift and go to state 42

    Designator                     shift and go to state 53

state 19

    (7) WhichSection -> ConstSection .

    BEGIN           reduce using rule 7 (WhichSection -> ConstSection .)
    CONSTANT        reduce using rule 7 (WhichSection -> ConstSection .)
    TYPE            reduce using rule 7 (WhichSection -> ConstSection .)
    VAR             reduce using rule 7 (WhichSection -> ConstSection .)
    ID              reduce using rule 7 (WhichSection -> ConstSection .)
    PROCEDURE       reduce using rule 7 (WhichSection -> ConstSection .)
    FUNCTION        reduce using rule 7 (WhichSection -> ConstSection .)
    CONSTRUCTOR     reduce using rule 7 (WhichSection -> ConstSection .)


state 20

    (152) FuncHeading -> FUNCTION . Designator FormalParams COLON Type
    (109) Designator -> . ID DesSubEleStar

    ID              shift and go to state 42

    Designator                     shift and go to state 54

state 21

    (147) ProcedureDeclSection -> LambFuncDecl .

    BEGIN           reduce using rule 147 (ProcedureDeclSection -> LambFuncDecl .)
    CONSTANT        reduce using rule 147 (ProcedureDeclSection -> LambFuncDecl .)
    TYPE            reduce using rule 147 (ProcedureDeclSection -> LambFuncDecl .)
    VAR             reduce using rule 147 (ProcedureDeclSection -> LambFuncDecl .)
    ID              reduce using rule 147 (ProcedureDeclSection -> LambFuncDecl .)
    PROCEDURE       reduce using rule 147 (ProcedureDeclSection -> LambFuncDecl .)
    FUNCTION        reduce using rule 147 (ProcedureDeclSection -> LambFuncDecl .)
    CONSTRUCTOR     reduce using rule 147 (ProcedureDeclSection -> LambFuncDecl .)


state 22

    (8) WhichSection -> TypeSection .

    BEGIN           reduce using rule 8 (WhichSection -> TypeSection .)
    CONSTANT        reduce using rule 8 (WhichSection -> TypeSection .)
    TYPE            reduce using rule 8 (WhichSection -> TypeSection .)
    VAR             reduce using rule 8 (WhichSection -> TypeSection .)
    ID              reduce using rule 8 (WhichSection -> TypeSection .)
    PROCEDURE       reduce using rule 8 (WhichSection -> TypeSection .)
    FUNCTION        reduce using rule 8 (WhichSection -> TypeSection .)
    CONSTRUCTOR     reduce using rule 8 (WhichSection -> TypeSection .)


state 23

    (140) VarSection -> VAR . ColonVarDecl
    (141) ColonVarDecl -> . VarDecl SEMICOLON ColonVarDecl
    (142) ColonVarDecl -> .
    (143) VarDecl -> . IdentList COLON Type
    (130) IdentList -> . ID TypeArgs CommaIDTypeArgs
    (131) IdentList -> . ID CommaIDTypeArgs

  ! shift/reduce conflict for ID resolved as shift
    BEGIN           reduce using rule 142 (ColonVarDecl -> .)
    CONSTANT        reduce using rule 142 (ColonVarDecl -> .)
    TYPE            reduce using rule 142 (ColonVarDecl -> .)
    VAR             reduce using rule 142 (ColonVarDecl -> .)
    PROCEDURE       reduce using rule 142 (ColonVarDecl -> .)
    FUNCTION        reduce using rule 142 (ColonVarDecl -> .)
    CONSTRUCTOR     reduce using rule 142 (ColonVarDecl -> .)
    ID              shift and go to state 58

  ! ID              [ reduce using rule 142 (ColonVarDecl -> .) ]

    ColonVarDecl                   shift and go to state 55
    IdentList                      shift and go to state 56
    VarDecl                        shift and go to state 57

state 24

    (9) WhichSection -> VarSection .

    BEGIN           reduce using rule 9 (WhichSection -> VarSection .)
    CONSTANT        reduce using rule 9 (WhichSection -> VarSection .)
    TYPE            reduce using rule 9 (WhichSection -> VarSection .)
    VAR             reduce using rule 9 (WhichSection -> VarSection .)
    ID              reduce using rule 9 (WhichSection -> VarSection .)
    PROCEDURE       reduce using rule 9 (WhichSection -> VarSection .)
    FUNCTION        reduce using rule 9 (WhichSection -> VarSection .)
    CONSTRUCTOR     reduce using rule 9 (WhichSection -> VarSection .)


state 25

    (159) LambFuncDecl -> ID . COLON SimpleExpression
